--- a/index.html
+++ b/index.html
@@ -49,24 +49,43 @@
         /* Estilos de Turno Activo - Enhanced */
         .combatant-active {
             animation: activeGlow 2s ease-in-out infinite alternate;
-            border-left: 5px solid #fbbf24;
-            background: linear-gradient(135deg, rgba(251, 191, 36, 0.08) 0%, rgba(30, 41, 59, 0.95) 100%);
+            border: 3px solid #fbbf24;
+            border-left: 6px solid #fbbf24;
+            background: linear-gradient(135deg, rgba(251, 191, 36, 0.15) 0%, rgba(251, 146, 60, 0.08) 50%, rgba(30, 41, 59, 0.95) 100%);
+            position: relative;
+            transform: scale(1.02);
+        }
+
+        .combatant-active::before {
+            content: '';
+            position: absolute;
+            inset: -3px;
+            border-radius: 1rem;
+            padding: 3px;
+            background: linear-gradient(135deg, #fbbf24, #f59e0b, #fbbf24);
+            -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
+            mask-composite: exclude;
+            opacity: 0.5;
+            pointer-events: none;
         }
 
         @keyframes activeGlow {
             0% { 
                 box-shadow: 
-                    0 0 20px rgba(251, 191, 36, 0.6),
-                    0 0 40px rgba(251, 191, 36, 0.3),
+                    0 0 25px rgba(251, 191, 36, 0.7),
+                    0 0 50px rgba(251, 191, 36, 0.4),
                     0 8px 16px -4px rgba(0, 0, 0, 0.6),
-                    inset 0 1px 0 rgba(255, 255, 255, 0.05);
+                    inset 0 2px 4px rgba(251, 191, 36, 0.2),
+                    inset 0 -2px 4px rgba(251, 191, 36, 0.1);
             }
             100% { 
                 box-shadow: 
-                    0 0 30px rgba(251, 191, 36, 0.8),
-                    0 0 60px rgba(251, 191, 36, 0.4),
+                    0 0 35px rgba(251, 191, 36, 0.9),
+                    0 0 70px rgba(251, 191, 36, 0.5),
                     0 12px 24px -6px rgba(0, 0, 0, 0.7),
-                    inset 0 1px 0 rgba(255, 255, 255, 0.08);
+                    inset 0 2px 4px rgba(251, 191, 36, 0.3),
+                    inset 0 -2px 4px rgba(251, 191, 36, 0.15);
             }
         }
 
