--- a/index.html
+++ b/index.html
@@ -1113,6 +1113,11 @@
 
     </div>
 
+    <!-- Footer -->
+    <footer class="w-full text-center py-6 text-gray-400 text-sm">
+        &copy; 2025 Eugeni Corchero
+    </footer>
+
     <script>
         const { createApp, ref, computed, watch, nextTick } = Vue
 
